folder structure, bootstrap, font awesome, cleanup

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE HTML>
-<!--
-	Twenty by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 <head>
+
 	<title>Orie Hulan Website</title>
 	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="content/css/bootstrap.min.css">
+    <link rel="stylesheet" href="content/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="content/css/font-awesome.min.css">
+
+	<!-- Theme Styles-->
 	<link rel="stylesheet" href="content/css/main.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<!-- Custom Styles-->
 	<link rel="stylesheet" href="content/css/styles.css"/>
+
 
 </head>
 <body class="index">
@@ -34,7 +37,7 @@
 					</li>
 
 
-					<li class=""><a href="index.html">Contact</a></li>
+					<li id="contact-link" class=""><a href="">Contact</a></li>
 
 
 <!-- 							<li class="submenu">
@@ -334,7 +337,7 @@
 
 				</div>
 
-				<!-- Scripts -->
+				<!-- THEME JS Scripts -->
 				<script src="scripts/lib/jquery.min.js"></script>
 				<script src="scripts/lib/jquery.dropotron.min.js"></script>
 				<script src="scripts/lib/jquery.scrolly.min.js"></script>
@@ -343,8 +346,16 @@
 				<script src="scripts/lib/util.js"></script>
 				<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 				<script src="scripts/main.js"></script>
-				<script src="scripts/app.js"></script>
 
+				<!-- My Scripts-->
+
+				<!-- JQUERY-->
+      			<script src="scripts/lib/jquery-2.2.0.min.js"></script>
+
+      			<!-- Bootstrap-->
+				<script src="scripts/lib/bootstrap.min.js"></script>
+				<!-- My Scripts-->
+				<script src="scripts/app.js"></script>
 
 			</body>
 			</html>
