--- a/school-projects.html
+++ b/school-projects.html
@@ -8,13 +8,19 @@
 <head>
 	<title>No Sidebar - Twenty by HTML5 UP</title>
 	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="content/css/bootstrap.min.css">
+    <link rel="stylesheet" href="content/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="content/css/font-awesome.min.css">
+
+	<!-- Theme Styles-->
 	<link rel="stylesheet" href="content/css/main.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	<link rel="stylesheet" href="content/css/main.css" />
-	<link rel="stylesheet" href="content/css/styles.css" />
+	<!-- Custom Styles-->
+	<link rel="stylesheet" href="content/css/styles.css"/>
+	
 </head>
 <body class="no-sidebar">
 	<div id="page-wrapper">
@@ -443,7 +449,9 @@
 
 	</div>
 
-	<!-- Scripts -->
+
+
+	<!-- THEME JS Scripts -->
 	<script src="scripts/lib/jquery.min.js"></script>
 	<script src="scripts/lib/jquery.dropotron.min.js"></script>
 	<script src="scripts/lib/jquery.scrolly.min.js"></script>
@@ -452,7 +460,17 @@
 	<script src="scripts/lib/util.js"></script>
 	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 	<script src="scripts/main.js"></script>
+
+	<!-- My Scripts-->
+
+	<!-- JQUERY-->
+		<script src="scripts/lib/jquery-2.2.0.min.js"></script>
+
+		<!-- Bootstrap-->
+	<script src="scripts/lib/bootstrap.min.js"></script>
+	<!-- My Scripts-->
 	<script src="scripts/app.js"></script>
+
 
 </body>
 </html>
