third commit - added photos, added form, styling, adjustments

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="content/css/bootstrap.min.css">
-    <link rel="stylesheet" href="content/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="content/css/font-awesome.min.css">
+	<link rel="stylesheet" href="content/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="content/css/font-awesome.min.css">
 
 	<!-- Theme Styles-->
 	<link rel="stylesheet" href="content/css/main.css" />
@@ -102,35 +102,35 @@
 					</div>
 
 					<header class="special container">
-					<!--<img src="images/orie-portrait.jpg" alt="Portrait" />-->
+						<!--<img src="images/orie-portrait.jpg" alt="Portrait" />-->
 						<span class="icon fa fa-arrow-down"></span>
 						<h4>Your Imagination Can be Real</h4>
-						</header>
+					</header>
 
 
-						<section class="wrapper style1 container special">
-							<div class="row">
-								<div class="4u 12u(narrower)">
-									<section>
-										<span class="icon featured fa fa-smile-o"></span>
-										<header>
-											<h3>Who am I</h3>
-										</header>
-										<!--Inline Javascript-->
-										<p id="whoIsOrie">This text is replaced with inline Javascript</p>
-										<a href="">Full Biography</a>
-									</section>
+					<section class="wrapper style1 container special">
+						<div class="row">
+							<div class="4u 12u(narrower)">
+								<section>
+									<span class="icon featured fa fa-smile-o"></span>
+									<header>
+										<h3>Who am I</h3>
+									</header>
+									<!--Inline Javascript-->
+									<p id="whoIsOrie">This text is replaced with inline Javascript</p>
+									<a href="">Full Biography</a>
+								</section>
 
-								</div>
-								<div class="4u 12u(narrower)">
+							</div>
+							<div class="4u 12u(narrower)">
 
-									<section>
-										<span class="icon featured fa fa-desktop"></span>
-										<header>
-											<h3>What I do</h3>
-										</header>
-										<!--Inline Javascript-->
-										<p id="whatOrieDoes">This text is replaced with inline Javascript>
+								<section>
+									<span class="icon featured fa fa-desktop"></span>
+									<header>
+										<h3>What I do</h3>
+									</header>
+									<!--Inline Javascript-->
+									<p id="whatOrieDoes">This text is replaced with inline Javascript>
 									</section>
 
 								</div>
@@ -238,7 +238,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="school-projects.html" class="image featured"><img src="content/images/pic01.jpg" alt="" /></a>
+										<a href="school-projects.html" class="image featured"><img src="content/images/school-projects-web.jpg" alt="" /></a>
 										<header>
 											<h3>School Projects</h3>
 										</header>
@@ -249,20 +249,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="content/images/pic02.jpg" alt="" /></a>
-										<header>
-											<h3>Course Outlines</h3>
-										</header>
-										<p>Full documentation of every course completeed in my program to date</p>
-									</section>
-
-								</div>
-							</div>
-							<div class="row">
-								<div class="6u 12u(narrower)">
-
-									<section>
-										<a href="#" class="image featured"><img src="content/images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="content/images/contract-work-web.jpg" alt="" /></a>
 										<header>
 											<h3>Contract Work</h3>
 										</header>
@@ -270,12 +257,26 @@
 									</section>
 
 								</div>
+								
+							</div>
+							<div class="row">
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="content/images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="content/images/course-outlines-web.jpg" alt="" /></a>
 										<header>
-											<h3>Additional (Pylons)</h3>
+											<h3>Course Outlines</h3>
+										</header>
+										<p>Full documentation of every course completeed in my program to date</p>
+									</section>
+
+								</div>
+								<div class="6u 12u(narrower)">
+
+									<section>
+										<a href="#" class="image featured"><img src="content/images/additional-work-web.jpg" alt="" /></a>
+										<header>
+											<h3>Additional</h3>
 										</header>
 										<p>Personal work, fiddling, experimenting</p>
 									</section>
@@ -307,19 +308,52 @@
 								<span class="icon featured fa fa-mobile"></span>
 								<p>(905) 716-3864</p>
 							</div>
+
 						</header>
-						<footer>
-							<ul class="buttons">
-								<li><a href="#" class="button">Message Me</a></li>
-							</ul>
-						</footer>
 
 					</section>
+
+
+					<section class="row contact-form-wrapper" >
+
+						<div id="contact-form" class="col-xs-11 col-sm-7 col-md-8" >
+
+							<h2><strong>Send a Message</strong></h2>
+							<form action="" method="post" class="dark-matter">
+								
+								<label>
+									<span>Your Name :</span>
+									<input id="name" type="text" name="name" placeholder="Your Full Name" />
+								</label>
+
+								<label>
+									<span>Your Email :</span>
+									<input id="email" type="email" name="email" placeholder="Valid Email Address" />
+								</label>
+
+								<label>
+									<span>Message :</span>
+									<textarea id="message" name="message" placeholder="Your Message"></textarea>
+								</label>  
+
+								<div class="button-wrapper">
+									<ul class="buttons">
+										<li><a href="#" class="button">Send</a></li>
+									</ul>  
+								</div>
+							</form>
+
+						</div>
+					</section>
+
+
+
+
 
 					<!-- Footer -->
 					<footer id="footer">
 
-						<ul class="icons">
+						<ul class="icons" >
 							<li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
@@ -334,6 +368,7 @@
 						<!--Template: http://html5up.net -->
 
 					</footer>
+
 
 				</div>
 
@@ -350,9 +385,9 @@
 				<!-- My Scripts-->
 
 				<!-- JQUERY-->
-      			<script src="scripts/lib/jquery-2.2.0.min.js"></script>
+				<script src="scripts/lib/jquery-2.2.0.min.js"></script>
 
-      			<!-- Bootstrap-->
+				<!-- Bootstrap-->
 				<script src="scripts/lib/bootstrap.min.js"></script>
 				<!-- My Scripts-->
 				<script src="scripts/app.js"></script>
