fourth commit - fixed up portfolio page, found images for main page, resized images

--- a/index.html
+++ b/index.html
@@ -239,10 +239,14 @@
 
 									<section>
 										<a href="school-projects.html" class="image featured"><img src="content/images/school-projects-web.jpg" alt="" /></a>
+										
 										<header>
 											<h3>School Projects</h3>
 										</header>
 										<p>Web Design, Code, Artwork</p>
+										<ul class="buttons">
+									<li><a href="school-projects.html" class="button">View</a></li>
+								</ul>
 									</section>
 
 								</div>
@@ -254,6 +258,9 @@
 											<h3>Contract Work</h3>
 										</header>
 										<p>Contract Work made for clients</p>
+										<ul class="buttons">
+									<li><a href="#" class="button">View</a></li>
+								</ul>
 									</section>
 
 								</div>
@@ -267,7 +274,10 @@
 										<header>
 											<h3>Course Outlines</h3>
 										</header>
-										<p>Full documentation of every course completeed in my program to date</p>
+										<p>All Course Outlines</p>
+										<ul class="buttons">
+									<li><a href="#" class="button">View</a></li>
+								</ul>
 									</section>
 
 								</div>
@@ -279,16 +289,13 @@
 											<h3>Additional</h3>
 										</header>
 										<p>Personal work, fiddling, experimenting</p>
+										<ul class="buttons">
+									<li><a href="#" class="button">View</a></li>
+								</ul>
 									</section>
 
 								</div>
 							</div>
-
-							<footer class="major">
-								<ul class="buttons">
-									<li><a href="#" class="button">See More</a></li>
-								</ul>
-							</footer>
 
 						</section>
 
@@ -320,7 +327,7 @@
 
 							<h2><strong>Send a Message</strong></h2>
 							<form action="" method="post" class="dark-matter">
-								
+
 								<label>
 									<span>Your Name :</span>
 									<input id="name" type="text" name="name" placeholder="Your Full Name" />
