--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<h1 id="logo"><a href="index.html">Welcome To <span class="logo-arrow">h</span><span>Orie Hulan Design</span></a></h1>
+		
+			<h1 id="logo"><a href="index.html"><img src="content/images/logo2-icon.png" class="logo-image" /></a><p>Welcome To</p> <!-- <span class="logo-arrow">h</span> --><a href="index.html"><span>Orie Hulan Design</span></a></h1>
 			<nav id="nav">
 				<ul>
 					<li class="current"><a href="index.html">Home</a></li>
@@ -102,7 +103,7 @@
 					</div>
 
 					<header class="special container">
-						<!--<img src="images/orie-portrait.jpg" alt="Portrait" />-->
+						<!-- <img src="content/images/orie-portrait.jpg" alt="Portrait" /> -->
 						<span class="icon fa fa-arrow-down"></span>
 						<h4>Your Imagination Can be Real</h4>
 					</header>
