--- a/school-projects.html
+++ b/school-projects.html
@@ -27,7 +27,7 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<h1 id="logo"><a href="index.html">Welcome To <span class="logo-arrow">h</span><span>Orie Hulan Design</span></a></h1>
+			<h1 id="logo"><a href="index.html"><img src="content/images/logo2-icon.png" class="logo-image" /></a><p>Welcome To</p> <!-- <span class="logo-arrow">h</span> --><a href="index.html"><span>Orie Hulan Design</span></a></h1>
 			<nav id="nav">
 				<ul>
 					<li class="current"><a href="index.html">Welcome</a></li>
