Starting at this again, making sure on a clean slate

--- a/index.html
+++ b/index.html
@@ -24,19 +24,17 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-		
+
 			<h1 id="logo"><a href="index.html"><img src="content/images/logo2-icon.png" class="logo-image" /></a><p>Welcome To</p> <!-- <span class="logo-arrow">h</span> --><a href="index.html"><span>Orie Hulan Design</span></a></h1>
 			<nav id="nav">
 				<ul>
 					<li class="current"><a href="index.html">Home</a></li>
 					<li class=""><a href="index.html">About</a></li>
 					<li id="portfolio-link" class=""><a href="">Portfolio</a></li>
-					<li class="submenu"><a href="index.html">Hobbies</a>
 						<ul>
 							<li><a href="index.html">Blog</a></li>
 						</ul>
 					</li>
-
 
 					<li id="contact-link" class=""><a href="">Contact</a></li>
 
@@ -240,7 +238,7 @@
 
 									<section>
 										<a href="school-projects.html" class="image featured"><img src="content/images/school-projects-web.jpg" alt="" /></a>
-										
+
 										<header>
 											<h3>School Projects</h3>
 										</header>
@@ -265,7 +263,7 @@
 									</section>
 
 								</div>
-								
+
 							</div>
 							<div class="row">
 								<div class="6u 12u(narrower)">
@@ -327,35 +325,33 @@
 						<div id="contact-form" class="col-xs-11 col-sm-7 col-md-8" >
 
 							<h2><strong>Send a Message</strong></h2>
-							<form action="" method="post" class="dark-matter">
+							<form class="dark-matter">
 
 								<label>
-									<span>Your Name :</span>
-									<input id="name" type="text" name="name" placeholder="Your Full Name" />
+									<span>Your Name: (Required) *</span>
+									<input id="form_name" type="text" name="name" placeholder="Your Full Name" />
 								</label>
 
 								<label>
-									<span>Your Email :</span>
-									<input id="email" type="email" name="email" placeholder="Valid Email Address" />
+									<span>Your Email: (Required) *</span>
+									<input id="form_email" type="email" name="email" placeholder="Valid Email Address" />
 								</label>
 
 								<label>
-									<span>Message :</span>
-									<textarea id="message" name="message" placeholder="Your Message"></textarea>
-								</label>  
+									<span>Message: (Required) *</span>
+									<textarea id="form_message" name="message" placeholder="Your Message"></textarea>
+								</label>
 
 								<div class="button-wrapper">
 									<ul class="buttons">
-										<li><a href="#" class="button">Send</a></li>
-									</ul>  
+										<li><a href="#" class="button" id="submit_button">Send</a></li>
+									</ul>
 								</div>
 							</form>
 
 						</div>
+
 					</section>
-
-
-
 
 
 					<!-- Footer -->
